# master-thesis

./: .gitignore  Oracle.cc  Oracle.h  README.md
frequency-reuse/: .cproject  .oppbuildspec  .project  .qtenvrc  .tkenvlog  LteAllocatorBestFit.html  Makefile  att  channel_gain  channel_gain_cell  channel_gain_cell_enb  channel_gain_d2d  config_channel.xml  cqizero.ini  current_lre_level  frequency-reuse  frequency-reuse_dbg  lre_output.txt  lre_output_rr.txt  lre_output_sta.txt  lre_progress.txt  measurements  omnetpp.ini  omnetpp.ini.orig  omnetpp.ini_BACKUP  package.ned  package.ned.orig  parse  sinrs
frequency-reuse/evaluation/: confidence_interval_demo.m  getCI.m  getPathAttenuation.m  interference_calculation.m  jain.m  parse-interference  parse-sinr  parse-tcp  parse-udp  plotCqiMeasurements.m  plotCqiMeasurements.m~  plot_individual_rcvd_bytes.m  plot_individual_rcvd_bytes.m~  plot_reuse_vs_noreuse.m  plot_sum_rcvd_bytes.m  plot_sum_rcvd_bytes.m~
frequency-reuse/evaluation/plots/: TUGAME_Vid_D2D_only.m  TUGAME_VoIP_D2D_only.m  analysis_TU_RR_PF_D2D_largearea.m  analysis_cluster_interference.m  analysis_incell_interference.m  analysis_incell_interference.m~  analysis_incell_interference_addition.m  analysis_incell_interference_addition.m~  analysis_incell_interference_addition_sim.m  analysis_incell_sinr.m  analysis_stackelcompare.m  analysis_stackelcompare_known.m  channel_gain.m  (+67 more)
shapley/: CMakeLists.txt
shapley/src/lib/: CMakeLists.txt  shapley.cpp  shapley.h
shapley/src/lib/tests/: ShapleyTests.cpp
shapley/src/tests/: CMakeLists.txt  unittests.cpp
(+12 files in other folders)
